tests/ui/rfcs/rfc-2632-const-trait-impl/const-impl-trait.stderr
error[E0277]: can't compare `()` with `()`
  --> $DIR/const-impl-trait.rs:36:17
   |
LL |     assert!(cmp(&()));
   |             --- ^^^ no implementation for `() == ()`
   |             |
   |             required by a bound introduced by this call
   |
   = help: the trait `const PartialEq` is not implemented for `()`
   = help: the trait `PartialEq` is implemented for `()`
note: required by a bound in `cmp`
  --> $DIR/const-impl-trait.rs:13:23
   |
LL | const fn cmp(a: &impl ~const PartialEq) -> bool {
   |                       ^^^^^^^^^^^^^^^^ required by this bound in `cmp`

error[E0369]: binary operation `==` cannot be applied to type `&impl ~const PartialEq`
  --> $DIR/const-impl-trait.rs:14:7
   |
LL |     a == a
   |     - ^^ - &impl ~const PartialEq
   |     |
   |     &impl ~const PartialEq

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0277, E0369.
For more information about an error, try `rustc --explain E0277`.
